# newrelic-mcp

./: .gitignore  LICENSE  Makefile  README.md  app.py.bak  pyproject.toml  requirements.txt  setup.py
newrelic_mcp/: __init__.py  cli.py  client.py  server.py
newrelic_mcp/tests/: client_tests.py
tests/: test_client.py
