[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newrelic-mcp"
version = "0.1.0"
description = "New Relic MCP Server for monitoring and metrics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kirtiranjan Sahoo"}
]
dependencies = [
    "mcp-server==0.1.4",
    "requests==2.32.0",
    "python-dotenv==1.0.0",
    "litellm==1.75.0",
    "httpx==0.28.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
newrelic-mcp = "newrelic_mcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]
build = [
    "setuptools==80.9.0",
    "build==1.0.0",
    "twine==4.0.2",
]

[tool.setuptools]
packages = ["newrelic_mcp"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3 